--- a/src/CardGallery.css
+++ b/src/CardGallery.css
@@ -4,57 +4,85 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: auto;
-  padding: 50px;
+  padding: 50px 0;
   width: 100%;
-  background: whitesmoke;
+  background: whitesmoke;   
 }
 
-.gardens img {
+.image {
   border-radius: 20px;
   margin: 10px;
-  width: 250px;
-  height: 300px;
+  width: 200px;
+  height: 250px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-.gardens img:hover {
+.image:hover {
   transition: 0.4s all;
   transform: scale(1.1);
   filter: sepia(1.4);
 }
 
-.children {
-  background: whitesmoke;
+.pagesList {
+  display: flex;
+  flex-wrap: wrap;  
+  justify-content: center;
+  list-style: none;
+  background: whitesmoke; 
+  padding: 0;  
+  margin: 0;
   padding-bottom: 50px;
-  padding-inline-end: 50px;
-  text-align: end;
-  direction: rtl;
+  margin-bottom: 0;  
 }
-.children a {
-  color: #8e3a9f;
-  font-size: 1.1em;
+
+.pagesList li {      
+  padding: 5px 10px;   
+  margin: auto 0;     
 }
-.children a:hover {
-  text-decoration: underline;
+.pagesList .listItem:hover{
   cursor: pointer;
+  background: rgba(197, 199, 199, 0.192);
+  transform: scale(1.2);
+}
+.activeListItem{
+  background: rgba(82, 167, 65, 0.548); 
 }
 
 /* Modal css */
-.modal {
-  display: none;
+.modal {  
+  opacity: 0;
+  transform: translateY(100%);    
 }
 
 .modalVisible {  
-  position: fixed;
-  z-index: 200;
+  position: fixed; /* Stay in place */
+  z-index: 200; /* Sit on top */
   padding: 60px 0;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.9);
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+  transition: 0.3s all ease-out;
+  transform: translateY(0);
+  opacity: 1;   
+}
+.modalExit{  
+  position: fixed; /* Stay in place */
+  z-index: 200; /* Sit on top */
+  padding: 60px 0;
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+  transition: 0.3s all ease-out;
+  transform: translateY(100%);
+  opacity: 0; 
 }
 
 .modalContent {
@@ -86,7 +114,4 @@
   text-decoration: none;
   transform: scale(1.2);
   cursor: pointer;
-}
-
-@media screen and (max-width: 1024px) {
 }
